// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File field should render File with data 1`] = `
<FieldTemplate
  description="This is the file field"
  descriptionId="my-file-field-description"
  errorId="my-file-field-error"
  errorMessage="This is wrong"
  id="my-file-field"
  isValid={true}
  label="Upload file"
  labelAfter={false}
  required={undefined}
>
  <div
    className="theme-file"
  >
    <input
      aria-describedby="my-file-field-description my-file-field-error"
      aria-invalid={false}
      aria-required={undefined}
      autoFocus={false}
      className="form-control"
      disabled={false}
      id="my-file-field"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Select a file to upload"
      readOnly={false}
      type="file"
    />
    <input
      className="form-control theme-file-replace"
      id="input-my-file-field"
      name="input-my-file-field"
      placeholder="Select a file to upload"
      value="test.xml"
    />
  </div>
</FieldTemplate>
`;

exports[`File field should render default File 1`] = `
<FieldTemplate
  description="This is the file field"
  descriptionId="my-file-field-description"
  errorId="my-file-field-error"
  errorMessage="This is wrong"
  id="my-file-field"
  isValid={true}
  label="Upload file"
  labelAfter={false}
  required={undefined}
>
  <div
    className="theme-file"
  >
    <input
      aria-describedby="my-file-field-description my-file-field-error"
      aria-invalid={false}
      aria-required={undefined}
      autoFocus={false}
      className="form-control"
      disabled={false}
      id="my-file-field"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Select a file to upload"
      readOnly={false}
      type="file"
    />
    <input
      className="form-control theme-file-replace"
      id="input-my-file-field"
      name="input-my-file-field"
      placeholder="Select a file to upload"
      value=""
    />
  </div>
</FieldTemplate>
`;
